--- a/.travis.yml
+++ b/.travis.yml
@@ -3,35 +3,40 @@ sudo: required
 
 language: cpp
 
-
-cache:
-  directories:
-  - $HOME/.ccache
-  - $HOME/deps
-  - /opt/cmake
-
-addons:
-  apt:
-    update: true
-    sources: &default_sources
-    - ubuntu-toolchain-r-test
-
 matrix:
   include:
-  - os: linux
-    compiler: gcc
+
+  # GCC 8
+  - env: UNIT_TESTS=true COMPILER=g++-8 ENABLE_MEMCHECK=true
+    addons: { apt: { packages: ["g++-8", "valgrind"], sources: ["ubuntu-toolchain-r-test"] } }
+
+  - env: UNIT_TESTS=true COMPILER=default CMAKE_OPTIONS="-DOMP_NUM_THREADS=4"
+    addons: *defaults
 
 install:
+############################################################################
+# All the dependencies are installed in ${HOME}/deps/
+############################################################################
+- DEPS_DIR="${HOME}/deps"
+- mkdir -p ${DEPS_DIR} && cd ${DEPS_DIR}
+
+############################################################################
+# Setup default versions and override CXX set by Travis if needed
+############################################################################
+- if [[ "${COMPILER}" == "default" ]]; then COMPILER=clang++-8.0; fi
+
+- if [[ "${COMPILER}" != "" ]]; then export CXX=${COMPILER}; fi
+- ${CXX} --version
+
+############################################################################
+# Install a recent CMake
+############################################################################
 - |
-  sudo apt remove cmake
-  sudo apt purge --auto-remove cmake
-
-  version=3.12
-  build=3
-  mkdir ~/temp
-  cd ~/temp
-  wget https://cmake.org/files/v$version/cmake-$version.$build-Linux-x86_64.sh
-  sudo mkdir /opt/cmake
-  sudo sh cmake-$version.$build-Linux-x86_64.sh --prefix=/opt/cmake
-
-  sudo ln -s /opt/cmake/bin/cmake /usr/local/bin/cmake
+  if [[ "${TRAVIS_OS_NAME}" == "linux" ]]; then
+    CMAKE_URL="https://cmake.org/files/v3.10/cmake-3.10.0-Linux-x86_64.tar.gz"
+    mkdir cmake && travis_retry wget --no-check-certificate --quiet -O - ${CMAKE_URL} | tar --strip-components=1 -xz -C cmake
+    export PATH=${DEPS_DIR}/cmake/bin:${PATH}
+  else
+    brew install cmake || brew upgrade cmake
+  fi
+- cmake --version
