--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 dist: trusty
 sudo: required
 
+language: python
 
 env: [OMP_NUM_THREADS=4]
 
@@ -12,6 +13,7 @@ before_install: [
   "CMAKE_VERSION=3.12",
   "CMAKE_BUILD=3",
   "wget https://cmake.org/files/v${CMAKE_VERSION}/cmake-${CMAKE_VERSION}.${CMAKE_BUILD}-Linux-x86_64.sh",
+  "sudo mkdir /opt/cmake",
   "sudo sh cmake-${CMAKE_VERSION}.${CMAKE_BUILD}-Linux-x86_64.sh --prefix=/opt/cmake --skip-license",
   "sudo ln -s /opt/cmake/bin/cmake /usr/local/bin/cmake",
   "cmake --version",
