--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,11 @@ script: [
   "ls -Al",
   "cd build",
   "ls -Al",
+  "cd T7025",
+  "ls -Al",
+  "cd charon_opencl",
+  "ls -Al",
+  "echo ${HOME}",
   "mkdir build",
   "cd build",
   "cmake ..",
