--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ language: python
 
 env: [OMP_NUM_THREADS=4]
 
-before_install: [
+install: [
   "sudo apt remove cmake",
   "sudo apt purge --auto-remove cmake",
   "mkdir --verbose ~/cmake_download",
@@ -21,14 +21,7 @@ before_install: [
 ]
 
 script: [
-  "ls -Al",
-  "cd build",
-  "ls -Al",
-  "cd T7025",
-  "ls -Al",
-  "cd charon_opencl",
-  "ls -Al",
-  "echo ${HOME}",
+  "cd build/T7025/charon_opencl",
   "mkdir build",
   "cd build",
   "cmake ..",
