--- a/.travis.yml
+++ b/.travis.yml
@@ -13,13 +13,15 @@ install: [
   "pip install --upgrade cmake",
   "cmake --version",
   "g++ --version",
-  "sudo apt install -y ocl-icd-opencl-dev",
-  #  "clinfo"
+  "sudo apt install -y ocl-icd-opencl-dev clinfo",
+  "clinfo",
 ]
 
 before_script: [
-  "sudo ls /bin | grep -i gcc",
-  "sudo ls /bin | grep -i g++",
+  "cd /",
+  "ls -Al",
+  #  "sudo ls /bin | grep -i gcc",
+  #  "sudo ls /bin | grep -i g++",
 
   "cd ${TRAVIS_BUILD_DIR}",
   "ls -Al",
