--- a/.travis.yml
+++ b/.travis.yml
@@ -15,10 +15,12 @@ install: [
   "g++ --version",
   "sudo apt install -y ocl-icd-opencl-dev clinfo",
   "clinfo",
+  "cd",
+  "ls -Al",
 ]
 
 before_script: [
-  "cd /",
+  "cd /bin",
   "ls -Al",
   #  "sudo ls /bin | grep -i gcc",
   #  "sudo ls /bin | grep -i g++",
