--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,8 @@ before_script: [
   #  "sudo ls /bin | grep -i gcc",
   #  "sudo ls /bin | grep -i g++",
 
+  "cd ${TRAVIS_BUILD_DIR}/.travis",
+  "ls -Al",
   "cd ${TRAVIS_BUILD_DIR}",
   "ls -Al",
   "mkdir build",
