--- a/.travis.yml
+++ b/.travis.yml
@@ -39,6 +39,14 @@ matrix:
     env: CXX_NAME='g++-6'
     addons: {apt: {packages: [g++-6], sources: [ubuntu-toolchain-r-test]}}
 
+  - os: linux
+    env: CXX_NAME='g++-7'
+    addons: {apt: {packages: [g++-7], sources: [ubuntu-toolchain-r-test]}}
+
+  - os: linux
+    env: CXX_NAME='g++-8'
+    addons: {apt: {packages: [g++-8], sources: [ubuntu-toolchain-r-test]}}
+
 script: [
   "cmake ..",
   "cmake --build .",
