--- a/.travis.yml
+++ b/.travis.yml
@@ -48,7 +48,7 @@ matrix:
     addons: {apt: {packages: [g++-8], sources: [ubuntu-toolchain-r-test]}}
 
 script: [
-  "cmake ..",
+  "cmake -DCMAKE_BUILD_TYPE=RELEASE ..",
   "cmake --build .",
 ]
 #language: cpp
