Did start of settings parsing, start of brute force single threaded simulation.

--- a/config/config.json
+++ b/config/config.json
@@ -1,4 +1,6 @@
 {
+  "resulstsDir": "results",
+  "resultsFilenamePrefix": "out_",
   "numBodies": 500,
   "timeStep": 0.01,
   "numIterations": 200,
