--- a/.travis.yml
+++ b/.travis.yml
@@ -9,13 +9,13 @@ env: [OMP_NUM_THREADS=4]
 #  "sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y",
 #  "sudo apt-get update",
 #]
-addons: {
-  apt: {
-    packages: [ocl-icd-opencl-dev, beignet],
-    sources: [ubuntu-toolchain-r-test],
-    update: true
-  }
-}
+#addons: {
+#  apt: {
+#    packages: [ocl-icd-opencl-dev, beignet],
+#    sources: [ubuntu-toolchain-r-test],
+#    update: true
+#  }
+#}
 
 
 
@@ -50,11 +50,11 @@ matrix:
 
   - os: linux
     env: CXX='g++-7'
-    addons: {apt: {packages: [g++-7], sources: [ubuntu-toolchain-r-test]}}
+    addons: {apt: {packages: [g++-7, ocl-icd-opencl-dev, beignet], sources: [ubuntu-toolchain-r-test], update: true}}
 
   - os: linux
     env: CXX='g++-8'
-    addons: {apt: {packages: [g++-8], sources: [ubuntu-toolchain-r-test]}}
+    addons: {apt: {packages: [g++-8, ocl-icd-opencl-dev, beignet], sources: [ubuntu-toolchain-r-test], update: true}}
 
 script: [
   "cmake -DCMAKE_BUILD_TYPE=RELEASE ..",
