--- a/.travis.yml
+++ b/.travis.yml
@@ -23,13 +23,21 @@ matrix:
   #    env: CXX='g++-6'
   #    addons: {apt: {packages: [g++-6], sources: [ubuntu-toolchain-r-test]}}
 
-  - os: linux
-    env: CXX='g++-7'
-    addons: {apt: {packages: [g++-7, ocl-icd-opencl-dev, beignet], sources: [ubuntu-toolchain-r-test], update: true}}
+  #  - os: linux
+  #    env: CXX='g++-7'  # Doesn't support <filesystem>
+  #    addons: {apt: {packages: [g++-7, ocl-icd-opencl-dev, beignet], sources: [ubuntu-toolchain-r-test], update: true}}
 
   - os: linux
     env: CXX='g++-8'
-    addons: {apt: {packages: [g++-8, ocl-icd-opencl-dev, beignet], sources: [ubuntu-toolchain-r-test], update: true}}
+    addons: {apt: {packages: [g++-8, ocl-icd-opencl-dev, beignet],
+                   sources: [ubuntu-toolchain-r-test],
+                   update: true}}
+
+  - os: linux
+    env: CXX='clang++-6.0'
+    addons: {apt: {packages: [clang-6.0, libstdc++-7-dev, ocl-icd-opencl-dev, beignet],
+                   sources: [ubuntu-toolchain-r-test, llvm-toolchain-trusty],
+                   update: true}}
 
 script: [
   "cmake -DCMAKE_BUILD_TYPE=RELEASE ..",
