Fixed testConfig.json file being absent when testing Settings.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -12,3 +12,5 @@ target_link_libraries(charon_test Catch2::Catch2)
 target_link_libraries(charon_test libcharon)
 
 catch_discover_tests(charon_test)
+
+configure_file(testConfig.json testConfig.json)
