--- a/.travis.yml
+++ b/.travis.yml
@@ -35,7 +35,7 @@ matrix:
 
   - os: linux
     env: CXX='clang++-6.0'
-    addons: {apt: {packages: [clang-6.0, libstdc++-7-dev, ocl-icd-opencl-dev, beignet],
+    addons: {apt: {packages: [clang-6.0, ocl-icd-opencl-dev, beignet],
                    sources: [ubuntu-toolchain-r-test],
                    update: true}}
 
