Simulator + added softening length to used formula.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -4,8 +4,8 @@ include_directories(${CMAKE_SOURCE_DIR}/src)
 add_executable(
         charon_test
         main.cpp
-        Settings.cpp
-)
+        SettingsTest.cpp
+        UniverseTest.cpp)
 
 target_link_libraries(charon_test nlohmann_json::nlohmann_json)
 target_link_libraries(charon_test Catch2::Catch2)
