--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -19,7 +19,7 @@ add_library(
         base/BodyGenerator.hpp
         BodyGenerators/SphereBodyGenerator.cpp
         BodyGenerators/SphereBodyGenerator.hpp
-)
+        BodyGenerators/BinaryBodyGenerator.cpp BodyGenerators/BinaryBodyGenerator.hpp)
 target_compile_features(libcharon PUBLIC cxx_std_17)
 
 target_compile_options(
