Implemented multithreaded brute force.

--- a/config/config.json
+++ b/config/config.json
@@ -3,9 +3,9 @@
   "resultsDir": "results",
   "resultsFilenamePrefix": "out_",
   "algorithm": "brute-force",
-  "platform": "cpu-single-thread",
+  "platform": "cpu-multi-thread",
   "floatingPointType": "double",
-  "numberOfBodies": 100,
+  "numberOfBodies": 1000,
   "timeStep": 0.01,
   "snapshotDelta": 10,
   "nrOfSteps": 5000,
