--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,4 +21,6 @@ if(BUILD_TESTING AND CHARON_BUILD_TESTING)
     add_subdirectory(test)
 endif()
 
+add_subdirectory(bencmark)
+
 #add_subdirectory(test)
