--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,15 @@
-dist: xenial
-
-language: cpp
+#dist: xenial
+#
+#language: cpp
+dist: trusty
+language: python
 
 env: [OMP_NUM_THREADS=4]
 
 install: [
-#  "pip install --upgrade cmake",
-#  "cmake --version",
-#  "g++ --version",
+  "pip install --upgrade cmake",
+  "cmake --version",
+  "g++ --version",
 ]
 
 before_script: [
@@ -39,9 +41,9 @@ matrix:
 #                   sources: [ubuntu-toolchain-r-test, llvm-toolchain-trusty-6.0],
 #                   update: true}}
 
-  - os: osx
-    osx_image: xcode10.1
-    env: brew install gcc && CC=gcc-8 && CXX=g++-8
+#  - os: osx
+#    osx_image: xcode10.1
+#    env: brew install gcc && CC=gcc-8 && CXX=g++-8
 
 script: [
   "cmake -DCMAKE_BUILD_TYPE=RELEASE ..",
