--- a/bencmark/CMakeLists.txt
+++ b/bencmark/CMakeLists.txt
@@ -3,3 +3,7 @@ add_executable(
         benchmark
         main.cpp
 )
+target_compile_features(benchmark PUBLIC cxx_std_17)
+
+target_link_libraries(benchmark nlohmann_json::nlohmann_json)
+
