--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,7 @@ matrix:
 
   - os: linux
     env: CXX='g++-8'
-    addons: {apt: {packages: [g++-8, ocl-icd-opencl-dev, beignet],
+    addons: {apt: {packages: [g++-8, ocl-icd-opencl-dev, pocl],
                    sources: [ubuntu-toolchain-r-test],
                    update: true}}
 
