--- a/.travis.yml
+++ b/.travis.yml
@@ -39,7 +39,7 @@ matrix:
       apt:
         sources: [ubuntu-toolchain-r-test]
 #        packages: [g++-8, ocl-icd-opencl-dev, beignet-dev,]
-        packages: [g++-8, opencl-icd, ocl-icd-libopencl1]
+        packages: [g++-8, ocl-icd-libopencl1]
 #        update: true
 
 #  - os: linux  # TODO: fix compiling with clang
