--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
-#dist: xenial
+
 #
 #language: cpp
-dist: trusty
+#dist: trusty
 sudo: true
 language: python
 
@@ -36,6 +36,7 @@ matrix:
   #    addons: {apt: {packages: [g++-7, ocl-icd-opencl-dev, beignet], sources: [ubuntu-toolchain-r-test], update: true}}
 
   - os: linux
+    dist: xenial
     env: CXX='g++-8'
     addons:
       apt:
