Basic testing of all implemented Universes.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -7,6 +7,8 @@ add_executable(
         SettingsTest.cpp
         UniverseTest.cpp)
 
+target_compile_features(charon_test PUBLIC cxx_std_17)
+
 target_link_libraries(charon_test nlohmann_json::nlohmann_json)
 target_link_libraries(charon_test Catch2::Catch2)
 target_link_libraries(charon_test libcharon)
