Different method of calling test.

--- a/.travis.yml
+++ b/.travis.yml
@@ -56,5 +56,7 @@ matrix:
 script: [
   "cmake -DCMAKE_BUILD_TYPE=RELEASE ..",
   "cmake --build .",
-  "ctest",
+#  "ctest",
+  "cd test",
+  "./charon_test"
 ]
