--- a/bencmark/CMakeLists.txt
+++ b/bencmark/CMakeLists.txt
@@ -1,3 +1,4 @@
+include_directories(../src)
 
 add_executable(
         benchmark
@@ -5,5 +6,7 @@ add_executable(
 )
 target_compile_features(benchmark PUBLIC cxx_std_17)
 
+target_link_libraries(benchmark libcharon)
 target_link_libraries(benchmark nlohmann_json::nlohmann_json)
+target_link_libraries(benchmark stdc++fs)
 
