Added alternative brute force OpenCL implementation.

--- a/config/config.json
+++ b/config/config.json
@@ -2,9 +2,9 @@
   "enableFileOutput": true,
   "resultsDir": "results",
   "resultsFilenamePrefix": "out_",
-  "algorithm": "barnes-hut",
+  "algorithm": "brute-force",
   "barnesHutCutoff": 0.7,
-  "platform": "cpu-single-thread",
+  "platform": "openclvec",
   "floatingPointType": "double",
   "numberOfBodies": 1000,
   "timeStep": 0.001,
