Added extra settings, split up naive and local mem using OpenCL versions, experimented with optimizing OpenCL code.

--- a/config/config.json
+++ b/config/config.json
@@ -4,9 +4,11 @@
   "resultsFilenamePrefix": "out_",
   "algorithm": "brute-force",
   "barnesHutCutoff": 0.7,
-  "platform": "opencl",
+  "platform": "cpu-multi-thread",
+  "numThreads": 6,
+  "openclCompileOpts": "-cl-fast-relaxed-math",
   "floatingPointType": "float",
-  "numberOfBodies": 10000,
+  "numberOfBodies": 40000,
   "timeStep": 0.001,
   "snapshotDelta": 50,
   "nrOfSteps": 200,
