Barnes-Hut OpenCL implementation.

--- a/config/config.json
+++ b/config/config.json
@@ -2,15 +2,15 @@
   "enableFileOutput": true,
   "resultsDir": "results",
   "resultsFilenamePrefix": "out_",
-  "algorithm": "brute-force",
+  "algorithm": "barnes-hut",
   "barnesHutCutoff": 0.7,
-  "platform": "cpu-multi-thread",
+  "platform": "cpu-single-thread",
   "numThreads": 6,
   "openclCompileOpts": "-cl-fast-relaxed-math",
   "floatingPointType": "float",
-  "numberOfBodies": 40000,
+  "numberOfBodies": 100,
   "timeStep": 0.001,
   "snapshotDelta": 50,
-  "nrOfSteps": 200,
+  "nrOfSteps": 5,
   "softeningLength": 0.005
 }
