--- a/.travis.yml
+++ b/.travis.yml
@@ -38,8 +38,8 @@ matrix:
     env: CXX='g++-8'
     addons:
       apt:
-        sources: [ubuntu-toolchain-r-test]
-        packages: [g++-8, ocl-icd-opencl-dev, beignet-dev,]
+        sources: [ubuntu-toolchain-r-test, ]
+        packages: [g++-8, ocl-icd-opencl-dev, beignet-dev, libltdl-dev, libhwloc-dev, pkg-config, libedit-dev, ]
 #        packages: [g++-8, ocl-icd-libopencl1]
 #        update: true
 
