--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -45,7 +45,9 @@ add_library(
         barnes-hut/SFCIndex.cpp
         barnes-hut/SFCIndex.hpp
         barnes-hut/opencl/Universe.cpp
-        barnes-hut/opencl/Universe.hpp barnes-hut/BitShift.hpp barnes-hut/opencl/sort/merge_sort_on_gpu.hpp)
+        barnes-hut/opencl/Universe.hpp
+        barnes-hut/BitShift.hpp
+        barnes-hut/opencl/sort/merge_sort_on_gpu.hpp)
 target_compile_features(libcharon PUBLIC cxx_std_17)
 
 target_compile_options(
