--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ cmake_minimum_required(VERSION 3.12)
 # Options
 option(CHARON_BUILD_TESTING "Build the unit tests when BUILD_TESTING is enabled." ON)
 option(CHARON_USE_DOUBLE "Use double precision floating point." ON)
+option(CHARON_TRAVIS_TEST "Testing with Travis CL." OFF)
 
 project(charon_opencl
         VERSION 0.9
