Created augmented benchmarks file.

--- a/config/config.json
+++ b/config/config.json
@@ -2,15 +2,15 @@
   "enableFileOutput": true,
   "resultsDir": "results",
   "resultsFilenamePrefix": "out_",
-  "algorithm": "barnes-hut",
+  "algorithm": "brute-force",
   "barnesHutCutoff": 0.7,
-  "platform": "cpu-single-thread",
+  "platform": "opencl",
   "numThreads": 6,
   "openclCompileOpts": "-cl-fast-relaxed-math",
-  "floatingPointType": "double",
-  "numberOfBodies": 25,
+  "floatingPointType": "float",
+  "numberOfBodies": 100000,
   "timeStep": 0.001,
   "snapshotDelta": 50,
-  "nrOfSteps": 3,
+  "nrOfSteps": 150000,
   "softeningLength": 0.005
 }
